	** `Dialer`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Header`: `Default`
	** `Listener`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Message`: `Default`, `FromIterator` for both values and references of `u8`
	** `Pipe`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Protocol`: `Ord`, `PartialOrd`
	** `Socket`: `Hash`, `Ord`, `PartialOrd`
	** `SocketAddr`: `Ord`, `PartialOrd`

=== Changed ===

* Renamed several methods to fit the Rust API guidelines:
	** `Message::header` → `Message::as_header`
	** `Message::header_mut` → `Message::as_mut_header`
	** `Message::zeros` → `Message::with_zeros`
* All variations of the "send" operation now take `Into<Message>` instead of `Message` directly.
* All of the "close" functions now take `&self` instead of `self`.

=== Deprecated ===

=== Removed ===

* The `Body` type has been removed. Most applications do not need to touch the header, so it makes sense to mask the distinction between the body and header slightly.
* `Pipe::socket_id` has been removed as well as all of the ID related functions. (#15)

=== Fixed ===

* The IPv4 address is now in the correct order. (#28)

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.5.0-rc.1] - 2019-04-14 ==

=== Added ===

* A new "unsafe options" set of traits have been added in order to expose options that are currently not safely handled.
	** Any of these options should be considered *unstable* as they will ideally be replaced with safe versions.
* The `IPC_SECURITY_DESCRIPTOR` has been added as the first "unsafe option".
* The `PAIR1_POLY` option has been added.
* The following traits are now implemented: (#18, #23)
	** `PipeEvent`: `Debug`, `Copy`, `Clone`, `Eq`, `PartialEq`, `Hash`
	** `Protocol`: `Eq`, `PartialEq`, `Hash`
	** `SocketAddr`: `Display`, `Eq`, `PartialEq`, `Hash`

=== Changed ===
